# claude-context

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
claude-md-research/: Makefile  pyproject.toml
claude-md-research/tests/: test_analyzer.py  test_config.py  test_generator.py  test_metrics.py  test_runner.py  test_setup.py
docs/plans/: 2025-12-15-claude-md-compliance-framework.md
experiments/01-scale/: config.yaml
experiments/02-emphasis/: config.yaml
experiments/03-rule-count/: config.yaml
experiments/04-verbose-rules/: config.yaml
results/: 01-scale-analysis.md  03-04-rule-count-analysis.md
results/charts/: 01-scale-compliance.dot  03-04-barchart.dot  03-04-comparison.dot
results/metrics/: 01-scale-p1000-t1.json  01-scale-p1000-t2.json  01-scale-p1000-t3.json  01-scale-p10000-t1.json  01-scale-p10000-t2.json  01-scale-p10000-t3.json  01-scale-p20000-t1.json  01-scale-p20000-t2.json  01-scale-p20000-t3.json  01-scale-p30000-t1.json  01-scale-p30000-t2.json  01-scale-p30000-t3.json  01-scale-p5000-t1.json  01-scale-p5000-t2.json  01-scale-p5000-t3.json  01-scale-p50000-t1.json  01-scale-p50000-t2.json  01-scale-p50000-t3.json  03-rule-count-r10-t1.json  03-rule-count-r10-t2.json  03-rule-count-r10-t3.json  03-rule-count-r100-t1.json  03-rule-count-r100-t2.json  03-rule-count-r100-t3.json  03-rule-count-r120-t1.json  03-rule-count-r120-t2.json  03-rule-count-r120-t3.json  03-rule-count-r20-t1.json  (+80 more)
scripts/: generate_chart.py  generate_rule_charts.py
tests/: __init__.py  test_cli.py  test_generator.py  test_setup.py
workspace/: CLAUDE.md
(+281 files in other folders)
