[project]
name = "claude-md-research"
version = "0.1.0"
description = "Empirical research framework for CLAUDE.md instruction compliance"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "matplotlib>=3.8.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
claude-md-research = "claude_md_research.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_md_research"]

[tool.ruff]
line-length = 100
